syntax = "proto3";

package alertpb;
option go_package="alert_proto/";

message Alert {
  float lat = 1;
  float lon = 2;
  Address address = 3;
  string title = 4;
  string body = 5;
  int64 expiration_datetime = 6;
}

message Address {
  string country = 1;
  string county_code = 2;
  string county = 3;
  string state = 4;
  string town = 5;
  string municipality = 6;
  string district = 7;
  string postcode = 8;
  string building = 9;
  string house_number = 10;
  string road = 11;
  string suburb = 12;
  string borough = 13;
}

// db service

message GetAlertsRequest {
  string token = 1;
  string user_id = 2;
}

message GetAlertsResponse {
  Alert alert = 1;
}

message NewAlertRequest {
  float lat = 1;
  float lon = 2;
  string title = 3;
  string body = 4;
  int64 expiration_datetime = 5;
}

message NewAlertResponse {
  Alert alert = 1;
}

service NotificationService {
  rpc GetAlerts(GetAlertsRequest) returns (stream GetAlertsResponse) {};
  rpc GetAllActiveAlerts(GetAllActiveAlertsRequest) returns (GetAllActiveAlertsResponse) {};
}

// db service

message GetAlertStreamRequest {

}

message GetAlertStreamResponse {
  Alert alert = 1;
}

message GetAllActiveAlertsRequest {
  string user_id = 1;
  string token = 2;
}

message GetAllActiveAlertsResponse {
  repeated Alert alerts = 1;
}

service AlertDatabaseService {
  rpc NewAlert(NewAlertRequest) returns (NewAlertResponse) {};
  rpc GetAlertStream(GetAlertStreamRequest) returns (stream GetAlertStreamResponse) {};
  rpc GetAllActiveAlerts(GetAllActiveAlertsRequest) returns (GetAllActiveAlertsResponse) {};
}
